Fixed header spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1236,7 +1236,7 @@
 	}
 
 	header.major h2, header.major h3 {
-		margin: 0 0 1.2em 0;
+		margin: 0 0 1.5em 0;
 	}
 
 	header.major p {
@@ -2105,15 +2105,7 @@
 			}
 
 			h2, h3, h4, h5, h6 {
-				font-size: 13pt !important;
-			}
-
-			h2, h3 {
-				margin: 0 0 0.25em 0;
-			}
-
-			h2 {
-				line-height: 1.5em;
+				font-size: 14pt !important;
 			}
 
 		/* Section/Article */
